--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ App/
 Data/Temp
 Data/Settings
 Data/User
+Readme.txt
+Data/PortableApps.comLauncherRuntimeData-AutoHotkey_LPortable.ini
 Other/
 AutoScriptWriter/
 *.exe
